# BootlegAlphaZero

./: .gitignore  README.md
alphazero/: a2c.py  alphazero.py  main.py  mcts.py  profile_main.py  simulate.py
alphazero/contrib/: DOCKER.txt  Dockerfile  bashrc  stable.list  testing.list  vimrc
alphazero/contrib/ansible/: README.txt  ctrl_run.yaml  include_task.yaml  inventory.yaml  run_task.yaml  vars.yaml
alphazero/cpp_impl/: CMakeLists.txt  CMakeLists.txt.python  a2c.cpp  a2c.hpp  alphazero.cpp  alphazero.hpp  cfg.cpp  cfg.hpp  env.cpp  env.hpp  env.py  env_wrapper.cpp  env_wrapper.hpp  game.hpp  gen_plot.py  lr_scheduler.cpp  lr_scheduler.hpp  mcts.cpp  mcts.hpp  params.hpp  pyenv.cpp  pyenv.hpp  replay_buffer.cpp  replay_buffer.hpp  results.md  simple_thread_pool.cpp  simple_thread_pool.hpp  simulations.json  tensorboard_util.cpp  tensorboard_util.hpp  test_all.cpp  test_all.hpp  util.hpp
alphazero/cpp_impl/envs/: cartpole.cpp  cartpole.hpp  env.cpp  env.hpp  gridworld.cpp  gridworld.hpp  mountain_car.cpp  mountain_car.hpp
alphazero/cpp_impl/runs/: README.txt  runs4.tar.xz
alphazero/profiles/: 1.profile  2.profile  3.profile  4.profile  5.profile  6.profile  7.profile  8.profile  9.profile  show_profile.py
alphazero/runs/: README.md
alphazero/runs/May17_19-25-34_amazonit.cip.ifi.lmu.de/: events.out.tfevents.1589736336.amazonit.cip.ifi.lmu.de.19678.0
alphazero/runs/May17_19-25-50_amazonit.cip.ifi.lmu.de/: events.out.tfevents.1589736352.amazonit.cip.ifi.lmu.de.19949.0
alphazero/runs/May17_19-30-51_beryll.cip.ifi.lmu.de/: events.out.tfevents.1589736655.beryll.cip.ifi.lmu.de.31582.0
alphazero/runs/May17_19-31-04_beryll.cip.ifi.lmu.de/: events.out.tfevents.1589736666.beryll.cip.ifi.lmu.de.31749.0
alphazero/runs/May17_19-31-44_danburit.cip.ifi.lmu.de/: events.out.tfevents.1589736708.danburit.cip.ifi.lmu.de.29941.0
alphazero/runs/May17_21-01-21_danburit.cip.ifi.lmu.de/: events.out.tfevents.1589742083.danburit.cip.ifi.lmu.de.10400.0
alphazero/runs/May17_21-02-54_amazonit.cip.ifi.lmu.de/: events.out.tfevents.1589742177.amazonit.cip.ifi.lmu.de.5965.0
alphazero/runs/May17_21-03-00_amazonit.cip.ifi.lmu.de/: events.out.tfevents.1589742182.amazonit.cip.ifi.lmu.de.6180.0
alphazero/runs/May17_21-43-26_beryll.cip.ifi.lmu.de/: events.out.tfevents.1589744608.beryll.cip.ifi.lmu.de.25915.0
alphazero/runs/May17_21-43-33_beryll.cip.ifi.lmu.de/: events.out.tfevents.1589744614.beryll.cip.ifi.lmu.de.26043.0
alphazero/runs/May17_23-03-58_danburit.cip.ifi.lmu.de/: events.out.tfevents.1589749440.danburit.cip.ifi.lmu.de.27092.0
alphazero/runs/May18_10-41-46_amazonit.cip.ifi.lmu.de/: events.out.tfevents.1589791308.amazonit.cip.ifi.lmu.de.11452.0
alphazero/runs/May18_11-49-16_amazonit.cip.ifi.lmu.de/: events.out.tfevents.1589795359.amazonit.cip.ifi.lmu.de.27175.0
alphazero/runs/May18_11-50-53_amazonit.cip.ifi.lmu.de/: events.out.tfevents.1589795456.amazonit.cip.ifi.lmu.de.28897.0
alphazero/runs/May18_11-51-21_danburit.cip.ifi.lmu.de/: events.out.tfevents.1589795483.danburit.cip.ifi.lmu.de.13598.0
alphazero/runs/May18_11-57-17_beryll.cip.ifi.lmu.de/: events.out.tfevents.1589795839.beryll.cip.ifi.lmu.de.12521.0
alphazero/runs/May18_14-01-25_beryll.cip.ifi.lmu.de/: events.out.tfevents.1589803288.beryll.cip.ifi.lmu.de.3110.0
alphazero/runs/May18_17-03-06_danburit.cip.ifi.lmu.de/: events.out.tfevents.1589814188.danburit.cip.ifi.lmu.de.9684.0
alphazero/runs/May18_17-07-36_danburit.cip.ifi.lmu.de/: events.out.tfevents.1589814458.danburit.cip.ifi.lmu.de.10088.0
alphazero/runs/May18_18-24-02_danburit.cip.ifi.lmu.de/: events.out.tfevents.1589819045.danburit.cip.ifi.lmu.de.28571.0
alphazero/runs/May18_18-56-37_sodalith.cip.ifi.lmu.de/: events.out.tfevents.1589821011.sodalith.cip.ifi.lmu.de.31925.0
alphazero/runs/May18_19-26-47_sodalith.cip.ifi.lmu.de/: events.out.tfevents.1589822810.sodalith.cip.ifi.lmu.de.6403.0
alphazero/runs/May18_22-36-39_sodalith.cip.ifi.lmu.de/: events.out.tfevents.1589834202.sodalith.cip.ifi.lmu.de.4986.0
alphazero/runs/May19_00-13-04_beryll.cip.ifi.lmu.de/: events.out.tfevents.1589839986.beryll.cip.ifi.lmu.de.3619.0
imitation/: a2c.py  main.py
mcts/: mcts.py
(+99 files in other folders)
